home/Deployments/shinobi/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shinobi-svc
  namespace: shinobi-system
spec:
  selector:
    app: shinobi-app
  ports:
    - port: 8080
